fix(checkout): CHECKOUT-6215 Long descriptions of shipping methods stretch page

--- a/src/app/shipping/shippingOption/StaticShippingOption.scss
+++ b/src/app/shipping/shippingOption/StaticShippingOption.scss
@@ -33,6 +33,9 @@
 // ShippingOption Label
 // ---------------------------------------------------
 .shippingOptionLabel {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
     .shippingOption {
         align-items: center;
         display: flex;
